backend/dist/frontend-deployment.template.json
{
  "Resources": {
    "frontenddeploymentdevvpcD9186809": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/Resource"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet1Subnet99B0AA92": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1/Subnet"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet1RouteTable2EF89E21": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1/RouteTable"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet1RouteTableAssociation1A2FC6FB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet1RouteTable2EF89E21"
        },
        "SubnetId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet1Subnet99B0AA92"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet1DefaultRoute9E6D2C1A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet1RouteTable2EF89E21"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "frontenddeploymentdevvpcIGW8E61F7E4"
        }
      },
      "DependsOn": [
        "frontenddeploymentdevvpcVPCGW158EAAB5"
      ],
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1/DefaultRoute"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet1EIP4DA6870D": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1/EIP"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet1NATGateway8A55054E": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "frontenddeploymentdevvpcPublicSubnet1EIP4DA6870D",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet1Subnet99B0AA92"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet1/NATGateway"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet2Subnet549B890D": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2/Subnet"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet2RouteTable1650B50D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2/RouteTable"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet2RouteTableAssociation27641929": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet2RouteTable1650B50D"
        },
        "SubnetId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet2Subnet549B890D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet2DefaultRoute7DF9AE65": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet2RouteTable1650B50D"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "frontenddeploymentdevvpcIGW8E61F7E4"
        }
      },
      "DependsOn": [
        "frontenddeploymentdevvpcVPCGW158EAAB5"
      ],
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2/DefaultRoute"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet2EIP7417D478": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2/EIP"
      }
    },
    "frontenddeploymentdevvpcPublicSubnet2NATGateway1510C45E": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "frontenddeploymentdevvpcPublicSubnet2EIP7417D478",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet2Subnet549B890D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PublicSubnet2/NATGateway"
      }
    },
    "frontenddeploymentdevvpcPrivateSubnet1Subnet081DE537": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet1/Subnet"
      }
    },
    "frontenddeploymentdevvpcPrivateSubnet1RouteTableB597FA8D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet1/RouteTable"
      }
    },
    "frontenddeploymentdevvpcPrivateSubnet1RouteTableAssociationFFCC9252": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "frontenddeploymentdevvpcPrivateSubnet1RouteTableB597FA8D"
        },
        "SubnetId": {
          "Ref": "frontenddeploymentdevvpcPrivateSubnet1Subnet081DE537"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "frontenddeploymentdevvpcPrivateSubnet1DefaultRoute5D6B86C1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "frontenddeploymentdevvpcPrivateSubnet1RouteTableB597FA8D"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet1NATGateway8A55054E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "frontenddeploymentdevvpcPrivateSubnet2Subnet8CDD139C": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet2/Subnet"
      }
    },
    "frontenddeploymentdevvpcPrivateSubnet2RouteTable3CC9E76F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet2/RouteTable"
      }
    },
    "frontenddeploymentdevvpcPrivateSubnet2RouteTableAssociation4A2B27D6": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "frontenddeploymentdevvpcPrivateSubnet2RouteTable3CC9E76F"
        },
        "SubnetId": {
          "Ref": "frontenddeploymentdevvpcPrivateSubnet2Subnet8CDD139C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "frontenddeploymentdevvpcPrivateSubnet2DefaultRoute731377E4": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "frontenddeploymentdevvpcPrivateSubnet2RouteTable3CC9E76F"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "frontenddeploymentdevvpcPublicSubnet2NATGateway1510C45E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "frontenddeploymentdevvpcIGW8E61F7E4": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend-deployment/frontend-deployment-dev-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/IGW"
      }
    },
    "frontenddeploymentdevvpcVPCGW158EAAB5": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        },
        "InternetGatewayId": {
          "Ref": "frontenddeploymentdevvpcIGW8E61F7E4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-vpc/VPCGW"
      }
    },
    "frontenddeploymentdevcluster7E69F678": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-cluster/Resource"
      }
    },
    "frontenddeploymentdevecsServiceLB0618A061": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "frontenddeploymentdevecsServiceLBSecurityGroup74B2E5BB",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Ref": "frontenddeploymentdevvpcPublicSubnet1Subnet99B0AA92"
          },
          {
            "Ref": "frontenddeploymentdevvpcPublicSubnet2Subnet549B890D"
          }
        ],
        "Type": "application"
      },
      "DependsOn": [
        "frontenddeploymentdevvpcPublicSubnet1DefaultRoute9E6D2C1A",
        "frontenddeploymentdevvpcPublicSubnet2DefaultRoute7DF9AE65"
      ],
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/LB/Resource"
      }
    },
    "frontenddeploymentdevecsServiceLBSecurityGroup74B2E5BB": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB frontenddeploymentfrontenddeploymentdevecsServiceLBDDF5651C",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/LB/SecurityGroup/Resource"
      }
    },
    "frontenddeploymentdevecsServiceLBSecurityGrouptofrontenddeploymentfrontenddeploymentdevecsServiceSecurityGroup76E1C363803384BB22": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "frontenddeploymentdevecsServiceLBSecurityGroup74B2E5BB",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "frontenddeploymentdevecsServiceSecurityGroup36EB6476",
            "GroupId"
          ]
        },
        "FromPort": 80,
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/LB/SecurityGroup/to frontenddeploymentfrontenddeploymentdevecsServiceSecurityGroup76E1C363:80"
      }
    },
    "frontenddeploymentdevecsServiceLBPublicListener136ECB5E": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "frontenddeploymentdevecsServiceLBPublicListenerECSGroupB07B60A6"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "frontenddeploymentdevecsServiceLB0618A061"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/LB/PublicListener/Resource"
      }
    },
    "frontenddeploymentdevecsServiceLBPublicListenerECSGroupB07B60A6": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "frontenddeploymentdevecsServiceTaskDefTaskRole73FD44B6": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/TaskDef/TaskRole/Resource"
      }
    },
    "frontenddeploymentdevecsServiceTaskDefFD4A57FA": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "AWS::AccountId"
                  },
                  ".dkr.ecr.",
                  {
                    "Ref": "AWS::Region"
                  },
                  ".",
                  {
                    "Ref": "AWS::URLSuffix"
                  },
                  "/aws-cdk/assets:294dbd2de0d207849f75e6a808c349c1c164053a2a37fbacb5a7bfee7d87ed13"
                ]
              ]
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "frontenddeploymentdevecsServiceTaskDefwebLogGroup60D343D8"
                },
                "awslogs-stream-prefix": "frontend-deployment-dev-ecsService",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "frontenddeploymentdevecsServiceTaskDefExecutionRoleF9CC3177",
            "Arn"
          ]
        },
        "Family": "frontenddeploymentfrontenddeploymentdevecsServiceTaskDef873112FC",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "frontenddeploymentdevecsServiceTaskDefTaskRole73FD44B6",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/TaskDef/Resource"
      }
    },
    "frontenddeploymentdevecsServiceTaskDefwebLogGroup60D343D8": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/TaskDef/web/LogGroup/Resource"
      }
    },
    "frontenddeploymentdevecsServiceTaskDefExecutionRoleF9CC3177": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/TaskDef/ExecutionRole/Resource"
      }
    },
    "frontenddeploymentdevecsServiceTaskDefExecutionRoleDefaultPolicy5BF5FC45": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ecr:",
                    {
                      "Ref": "AWS::Region"
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":repository/aws-cdk/assets"
                  ]
                ]
              }
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "frontenddeploymentdevecsServiceTaskDefwebLogGroup60D343D8",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "frontenddeploymentdevecsServiceTaskDefExecutionRoleDefaultPolicy5BF5FC45",
        "Roles": [
          {
            "Ref": "frontenddeploymentdevecsServiceTaskDefExecutionRoleF9CC3177"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
      }
    },
    "frontenddeploymentdevecsService73140EDC": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "frontenddeploymentdevcluster7E69F678"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 80,
            "TargetGroupArn": {
              "Ref": "frontenddeploymentdevecsServiceLBPublicListenerECSGroupB07B60A6"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "frontenddeploymentdevecsServiceSecurityGroup36EB6476",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "frontenddeploymentdevvpcPrivateSubnet1Subnet081DE537"
              },
              {
                "Ref": "frontenddeploymentdevvpcPrivateSubnet2Subnet8CDD139C"
              }
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "frontenddeploymentdevecsServiceTaskDefFD4A57FA"
        }
      },
      "DependsOn": [
        "frontenddeploymentdevecsServiceLBPublicListenerECSGroupB07B60A6",
        "frontenddeploymentdevecsServiceLBPublicListener136ECB5E"
      ],
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/Service/Service"
      }
    },
    "frontenddeploymentdevecsServiceSecurityGroup36EB6476": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "frontend-deployment/frontend-deployment-dev-ecsService/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "frontenddeploymentdevvpcD9186809"
        }
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/Service/SecurityGroup/Resource"
      }
    },
    "frontenddeploymentdevecsServiceSecurityGroupfromfrontenddeploymentfrontenddeploymentdevecsServiceLBSecurityGroup412637ED80A0B6ABD8": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 80,
        "GroupId": {
          "Fn::GetAtt": [
            "frontenddeploymentdevecsServiceSecurityGroup36EB6476",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "frontenddeploymentdevecsServiceLBSecurityGroup74B2E5BB",
            "GroupId"
          ]
        },
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "frontend-deployment/frontend-deployment-dev-ecsService/Service/SecurityGroup/from frontenddeploymentfrontenddeploymentdevecsServiceLBSecurityGroup412637ED:80"
      }
    }
  },
  "Outputs": {
    "frontenddeploymentdevecsServiceLoadBalancerDNS2E4C022C": {
      "Value": {
        "Fn::GetAtt": [
          "frontenddeploymentdevecsServiceLB0618A061",
          "DNSName"
        ]
      }
    },
    "frontenddeploymentdevecsServiceServiceURL7B5B95E9": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "frontenddeploymentdevecsServiceLB0618A061",
                "DNSName"
              ]
            }
          ]
        ]
      }
    }
  }
}
